--- a/css/style.css
+++ b/css/style.css
@@ -31,6 +31,7 @@ input[type=submit] {
 p {
     margin: 5px 0;
     line-height: 25px;
+    text-align: justify;
 }
 
 a {
@@ -74,7 +75,7 @@ header {
 }
 
 header h1 {
-    margin: 35px 0 0 0;
+    margin: 35px 0 0 -100px;
     font-size: 55px;
     color: #e56038;
     font-family: 'Baumans', cursive;
@@ -84,7 +85,7 @@ header p {
     font-family: 'Open Sans', sans-serif;
     font-size: 16px;
     color: #4a463b;
-    margin-left: 132px;
+    margin-left: -30px;
 }
 
 nav {
@@ -140,18 +141,18 @@ nav ul li a:hover {
 
 /* SLIDER */
 
-#slider_content1, #slider_content2, #slider_content3 {
+#slider_content1, #slider_content2, #slider_content3, #slider_content4 {
     line-height: 25px;
     font-family: 'Open Sans', sans-serif;
-    width: 350px;
+    width: 333px;
     position: absolute;
-    top: 15%;
-    left: 15%;
+    top: 10%;
+    left: 40%;
     display: none;
     z-index: 11;
 }
 
-#slider_content1 h3, #slider_content2 h3, #slider_content3 h3 {
+#slider_content1 h3, #slider_content2 h3, #slider_content3 h3, #slider_content4 h3 {
     color: #ebe8de;
     font-size: 25px;
     font-weight: bold;
@@ -166,7 +167,7 @@ nav ul li a:hover {
     display: block;
 }
 
-#slider_content1 p, #slider_content2 p, #slider_content3 p {
+#slider_content1 p, #slider_content2 p, #slider_content3 p, #slider_content4 p {
     margin: 0 0 30px 0;
     color: #4a463b;
     background-color: #ebe8de;
@@ -198,35 +199,6 @@ nav ul li a:hover {
 }
 
 
-/* SPACER */
-
-#spacer {
-    width: auto;
-    height: 70px;
-    background-color: #e56038;
-    position: relative;
-    font-family: 'Open Sans', sans-serif;
-    color: #ffffff;
-    font-size: 18px;
-}
-
-#spacer p {
-    margin-top: 22px;
-    width: auto;
-    position: absolute;
-    left: 50%;
-    margin-left: -450px;
-}
-
-#spacer .search {
-    margin-top: 15px;
-    width: auto;
-    position: absolute;
-    right: 50%;
-    margin-right: -480px;
-}
-
-
 /* 3 COLUMNS */
 
 #boxcontent {
@@ -234,6 +206,13 @@ nav ul li a:hover {
     max-width: 900px;
     margin: 0 auto;
     padding: 70px 0 45px 0;
+}
+
+#boxcontent h2 {
+    font-size: 20px;
+    border-bottom: 1px solid #d6d0c1;
+    padding: 20px 0;
+    margin-bottom: 20px;
 }
 
 #boxcontent article {
@@ -295,7 +274,7 @@ nav ul li a:hover {
     top: 0;
     left: 0;
     width: 100%;
-    height: 113px;
+    height: 94px;
     background: #000000 url("../img/zoom.png") center center no-repeat;
     z-index: 99;
     opacity: 0;
@@ -309,17 +288,24 @@ nav ul li a:hover {
 
 /* 2 COLUMNS */
 
+#text_columns h2 {
+    font-size: 20px;
+    border-bottom: 1px solid #d6d0c1;
+    padding: 20px 0;
+    margin-bottom: 20px;
+}
+
 #text_columns article.column1, #text_columns .column2 {
-    margin: 70px 0;
+    margin: 10px 0 70px 0;
     font-size: 14px;
     float: left;
     width: 450px;
     max-width: 450px;
 }
 
-#text_columns .column2 {
-    margin: 120px 0;
-}
+/*#text_columns .column2 {*/
+    /*margin: 120px 0;*/
+/*}*/
 
 .row {
     position: relative;
@@ -390,10 +376,11 @@ nav ul li a:hover {
     color: red;
 }
 
-#slider_content1 p.responsive_button, #slider_content2 p.responsive_button, #slider_content3 p.responsive_button {
-    display: none;
-    color: #000000;
-}
+/*#slider_content1 p.responsive_button, #slider_content2 p.responsive_button,*/
+/*#slider_content3 p.responsive_button, #slider_content4 p.responsive_button {*/
+    /*display: none;*/
+    /*color: #000000;*/
+/*}*/
 
 
 /* FOOTER */
@@ -543,22 +530,31 @@ footer .wrapper .column h4 {
 /* MEDIA QUERIES FOR A RESPONSIVE LAYOUT */
 
 @media (max-width: 1215px) {
-    #slider_content1, #slider_content2, #slider_content3 {
+    header h1 {
+        margin-left: 10px;
+    }
+
+    header p {
+        margin-left: 30px;
+    }
+
+    #slider_content1, #slider_content2, #slider_content3, #slider_content4 {
         width: auto;
         margin-right: 50px;
     }
 
-    #slider_content1 h2, #slider_content2 h2, #slider_content3 h2 {
+    #slider_content1 h2, #slider_content2 h2, #slider_content3 h2, #slider_content4 h2 {
         font-size: 18px;
     }
 
-    #slider_content1 p, #slider_content2 p, #slider_content3 p {
+    #slider_content1 p, #slider_content2 p, #slider_content3 p, #slider_content4 p {
         font-size: 14px;
     }
 
-    #slider_content1 p .responsive_button, #slider_content2 p .responsive_button, #slider_content3 p .responsive_button {
-        display: inline;
-    }
+    /*#slider_content1 p .responsive_button, #slider_content2 p .responsive_button,*/
+    /*#slider_content3 p .responsive_button, #slider_content4 p .responsive_button {*/
+        /*display: inline;*/
+    /*}*/
 
     .container .button {
         display: none;
@@ -566,32 +562,29 @@ footer .wrapper .column h4 {
 }
 
 @media (max-width: 915px) {
+    header h1 {
+        margin-left: 10px;
+        top: -50px;
+    }
+
+    header p {
+        margin-left: 20px;
+        top: -50px;
+    }
+
+    header nav {
+        top: 50px;
+        margin-left: -84px;
+    }
+
     #boxcontent article {
         float: none;
         margin: 30px auto 0 auto;
         width: 60%;
     }
 
-    #spacer {
-        font-size: 15px;
-    }
-
-    #spacer .search {
-        margin-top: 19px;
-        margin-right: 385px;
-    }
-
-    #spacer p {
-        margin-left: 370px;
-    }
-
-    input {
-        padding: 4px;
-        font-size: 14px;
-    }
-
-    input[type="submit"] {
-        padding: 1px 14px;
+    #boxcontent {
+        width: 500px;
     }
 
     #four_columns {
@@ -602,15 +595,14 @@ footer .wrapper .column h4 {
         margin-top: 25px;
     }
 
+    #text_columns {
+        width: 500px;
+    }
+
     #text_columns article.column1, #text_columns .column2 {
         float: none;
         max-width: 500px;
         margin: 50px 30px 0 30px;
-    }
-
-    .column2 .row {
-        float: none;
-        margin: 0 0 40px 50px;
     }
 
     footer .wrapper .column {
@@ -629,29 +621,20 @@ footer .wrapper .column h4 {
         height: 120px;
     }
 
+    header h1 {
+        margin-left: 30px;
+    }
+
+    header p {
+        margin-left: 50px;
+    }
+
     header nav {
         right: auto;
         bottom: auto;
         left: 50%;
         top: 100px;
         margin-left: -184px;
-    }
-
-    #spacer {
-        height: 100px;
-    }
-
-    #spacer p {
-        text-align: center;
-        position: static;
-        margin: 0 auto;
-        padding: 15px 0 7px 0;
-    }
-
-    #spacer .search {
-        text-align: center;
-        position: static;
-        margin: 0 auto;
     }
 
     footer {
@@ -695,9 +678,20 @@ footer .wrapper .column h4 {
         font-size: 14px;
     }
 
-    #spacer {
-        height: auto;
-        padding-bottom: 15px;
+    #text_columns {
+        width: auto;
+    }
+
+    #text_columns h2 {
+        margin: 0 30px;
+    }
+
+    #boxcontent {
+        width: auto;
+    }
+
+    #boxcontent h2 {
+        margin: 0 30px;
     }
 
     #four_columns {
@@ -714,10 +708,10 @@ footer .wrapper .column h4 {
         margin: 0 30px;
     }
 
-    .column2 .row {
-        margin: 0 0 40px 10px;
-        width: auto;
-    }
+    /*.column2 .row {*/
+        /*margin: 0 0 40px 10px;*/
+        /*width: auto;*/
+    /*}*/
 
     footer .wrapper {
         width: auto;
